--- a/Valentines/index.html
+++ b/Valentines/index.html
@@ -239,7 +239,7 @@
     <h2>!!!!IMPORTANT MESSAGE!!!!</h2>
     <div class="content-container">
         <h1>💖 BE MY VALENTINE? 💖</h1>
-        <h3>Surya Roshan Mugada, will you make me the happiest girl in the world and be my valentine?</h3>
+        <h3>[name], will you make me the happiest girl in the world and be my valentine?</h3>
         <div class="button-container">
             <button id="yes-button" onclick="handleChoice('yes')">Yes</button>
             <button id="no-button" onclick="handleChoice('no')">No</button>
